<resources>
    <string name="app_name">Android</string>
    <string name="welcome_nav">Android Navigation</string>
    <string name="play">PLAY</string>
    <string name="android_image_desc">Android Image</string>
    <string name="game_fragment_tv">Game Fragment</string>
    <string name="go_back_home">BACK</string>
    <string name="male_fragment">MALE FRAGMENT</string>
    <string name="male">MALE</string>
    <string name="female">FEMALE</string>
    <string name="submit">SUBMIT</string>
    <string name="female_fragment">FEMALE FRAGMENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="about_me">About Me</string>
    <string name="rules">RULES</string>
    <string name="about_title">About</string>
    <string name="rules_title">Rules</string>
    <string name="image_description">Image Description</string>
    <string name="search">Search</string>
    <string name="search_fragment_text">Search Fragment</string>
    <string name="share_text">Android Navigation System</string>
    <string name="share">Share</string>
</resources>