<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GameFragment">

        <TextView
            android:id="@+id/game_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/days_one"
            android:text="@string/game_fragment_tv"
            android:textAlignment="center"
            android:textColor="#9C27B0"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_text">

            <RadioButton
                android:id="@+id/male_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:checked="true"
                android:text="@string/male"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/female_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="@string/female"
                android:textSize="20sp" />
        </RadioGroup>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/days_one"
            android:text="@string/submit"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radio_group"
            app:layout_constraintVertical_bias="0.283" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
